# mtd_workflowmax

./: .env.template  .gitignore  API authentication - WorkflowMax by BlueRock.md  LICENSE.md  MANIFEST.in  README.md  config.yml  fix_api_descriptions.py  pyproject.toml  reconstruct_yaml.py  requirements.txt  setup.py  workflowmax_api.yaml  workflowmax_api_reconstructed.yaml
api_spec/: README.md  What is the OAuth 2.0 Authorization Code Grant Type  Okta Developer.md  index.yaml  info.yaml
api_spec/components/: schemas.yaml
api_spec/paths/: category.yaml  client.yaml  client_group.yaml  cost.yaml  custom_field.yaml  invoice.yaml  job.yaml  lead.yaml  purchase_order.yaml  quote.yaml  staff.yaml  supplier.yaml  task.yaml  template.yaml  time.yaml
config/: api.yml
docs/: README.md  api_integration.md  architecture.md  examples.md  models.md  usage.md
linkedin_docs/: API Docs - linkedin-api documentation.md  Examples - linkedin-api documentation.md  Key Concepts - linkedin-api documentation.md
mtd_workflowmax/: README.md  __init__.py  __main__.py  cli.py  setup.py
mtd_workflowmax/api/: auth.py  client.py
mtd_workflowmax/config/: __init__.py  api_config.py  auth_config.py  base.py
mtd_workflowmax/core/: logging.py  metrics.py  utils.py  xml_parser.py
mtd_workflowmax/models/: contact.py  custom_field.py  job.py  profile_data.py  relationship.py
old_codebase/: README.md  auth.py  config.py  contact_fetcher.py  exceptions.py  linkedin_matcher.py  workflowmax_linkedin.py
old_codebase/mtd_workflowmax/: api_client.py  (+4 more)
utility_scripts/: README.md  split_yaml.py
(+238 files in other folders)
