[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtd-workflowmax"
dynamic = ["version"]
description = "MTD's WorkflowMax 2 API client for fetching LinkedIn profiles"
readme = "README.md"
authors = [
    { name = "MTD", email = "info@mtd.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.31.0",
    "python-jwt>=4.0.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.1",
    "tqdm>=4.65.0",
    "urllib3>=2.0.4",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.5.1",
    "types-requests>=2.31.0.2",
    "types-PyYAML>=6.0.12.11",
]

[project.scripts]
mtd-workflowmax-linkedin = "mtd_workflowmax.cli:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["mtd_workflowmax"]

[tool.setuptools.package-data]
mtd_workflowmax = ["py.typed"]

[tool.setuptools.exclude-package-data]
"*" = ["tests/*", "docs/*", "api_spec/*", "utility_scripts/*", "old_codebase/*"]
